# FastTQ

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-119506a8087804f610b5353ee7240fc3024f059a8ccfa721de62cd82dd95ef37.json  query-2c793f8d2612da15cd89ef2ca83caf2fda8b7a7daf7293af990e46194a182312.json  query-48164ee507026dd374d57a3a8d3ca0a21974f2fab2fb15c43a8213390c9139cb.json  query-836685e2c608a7d5e85e447ab4102df3cdfdeed3c79cfdd271b0cad46ca2af2c.json  (+4 more)
clients/client_sdks/python/: pyproject.toml
clients/client_sdks/python/examples/: example_1.py  example_worker.py
clients/client_sdks/python/src/broker/: __init__.py  config.py  core.py  rabbitmq.py  redis.py
clients/client_sdks/python/src/cli/: __init__.py
clients/client_sdks/python/src/manager/: __init__.py  client.py
clients/client_sdks/python/src/models/: task.py
clients/client_sdks/python/src/publisher/: __init__.py  client.py
clients/client_sdks/python/src/python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clients/client_sdks/python/src/worker/: __init__.py  client.py  config.py
clients/client_sdks/python/tests/: conftest.py
clients/client_sdks/python/tests/manager/: test_task_management.py
clients/client_sdks/python/tests/worker/: test_worker_client.py
proto/: galactus.proto
server/libs/common/: Cargo.toml
server/libs/common/src/: lib.rs
server/libs/common/src/brokers/: base.rs  core.rs  mod.rs  rabbit.rs  redis.rs  testing.rs
server/libs/common/src/db/: mod.rs
server/libs/common/src/models/: mod.rs  task_kinds.rs  task_types.rs  tasks.rs  time_format.rs  workers.rs
server/services/galactus/: .dockerignore  .env.sample  Cargo.toml  Dockerfile  build.rs
server/services/galactus/.sqlx/: query-12e7f5162822090d39a3421b701ea4259eb6090160bc5534e2b0639d1555e0c7.json  query-21112415b718c21d1547e0d47b123c1e4e598517b4e9ad31e1280c72d1e10fd0.json  query-212ff527a308a944c1bd76b19fe1d700ae6700e0c60feec8dd9a0afc37bfc31c.json  query-346c3f2760a338220216a9fc49fb71e6642eb24ed801ab4fbd796063f2382faf.json  query-38a90a479361aef7c63bce9a077a7c62d11115721c8b5dbb792c1df26752c2b5.json  query-4e761fbda2b3ecd9e8cb29c490e33a11573d5e2a1786b6893fc68c5fb194bbe1.json  query-520030b2ea0abbf6b698af32239d060277e7da8d3344f2df996341f8d20f6116.json  query-527e0810e1f83471075d08e96c63e34d6d25b73f095155ffe73bfd0b2465275d.json  query-7860854bb94231df64386e024aa224fecfdbc9320d3362cae417b659ac7708d2.json  query-8054e64792b9d7392f1447952786accfdd4282b83b0fbce12b554432c2957d9e.json  query-8308e8cdaea9b944a4014986e6c39a25e5f7cbf4fb68d52d9727c86d70045d8b.json  query-90ac9d8f7df5d8b7a2d6a363b9d152abe44018a064886d190eb9fce7e9ee3003.json  query-9acf0e059cb89c56046086af7b5dd1fca08260d106895e6631edcd93812dd719.json  query-aa98b2c0eedf32beae9ff411a294ed918e70c04cae87f8e3df4fa216c2155ad9.json  query-bbe57622596e2d1dda9497592be7be0216a70c9464fe75818d502a2728c08bee.json  query-bcb75cafd804568c98384d6dc94bf216b931054601826bdb525d41e6eb473c90.json  query-cfd923455ea3eab4ab559cfa21fb192d7a98fcb8a3653bdb045f7bdc71391a9b.json  query-e6a8c4718410e2e32224cafa6c71a5804961463a833d19bc7bc125b1dd34fbfc.json  query-f09e78b603dad9ba7fbcd6d7b55822db7f5b3b714c58eb7392a0704c80a423a1.json  query-f0c34bd26b69808aa0ca4e332e1169c4097bbb8ec30d865e6addff7378cf1a22.json  query-f961a0c2cbd24b24488773be0947a7fe70d5b66eca06d2367252f53682d1b7cd.json
server/services/galactus/proto/: galactus.proto
server/services/galactus/src/: config.rs  main.rs  testing.rs
server/services/galactus/src/api/: health.rs  mod.rs  openapi_docs.rs  tasks.rs  workers.rs
server/services/galactus/src/brokers/: base.rs  mod.rs  queue.rs  rabbit.rs  redis.rs
server/services/galactus/src/repo/: core.rs  mod.rs  traits.rs
server/services/galactus/src/repo/impls/: mod.rs  task_instance_repo.rs  task_kind_repo.rs  task_repo.rs  task_type_repo.rs  worker_repo.rs
server/services/manager/: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md
server/services/manager/.sqlx/: query-66e26d280096faa1b538a47459e3bd41e4cf4bd6264bc985cda60d50266c1fd2.json  query-8675c82250313cb47e8c206ecf5bfadbbed15f47ac1f19bdfea1d311ae3ec4c5.json  query-cee91afba15149ad872460f795718f4d1d63210c40b98a8ddc787abec962e40e.json  query-d3d7f790bc6fdb264013adc97554e06f2ad44304e6612b578bcd2aaf4149479a.json  query-f1d67673ff405386b47da815a49db729516059e22f5c0ceb2973cc7e76728257.json  query-fdcd10e250e3976c946217b5a40040d1c9131e15445e466f6a3af00dfa21805f.json
server/services/manager/src/: config.rs  main.rs
server/services/manager/src/api/: workers.rs
server/services/manager/src/repo/impls/: worker_repo.rs
(+22 files in other folders)
