[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
] }
strum_macros = "0.26.4"
async-trait = "0.1.83"
lapin = "2.5.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
tracing = "0.1.40"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "time"]}
time = { version = "0.3.36", features = ["serde"] }
