[package]
name = "galactus"
version = "0.1.0"
edition = "2021"
description = "Galactus is a monolithic service that handles communication with the database, distributing tasks among workers, and communicating with the database."

[dependencies]
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
