[package]
name = "galactus"
version = "0.1.0"
edition = "2021"
description = "Galactus is a monolithic service that handles communication with the database, distributing tasks among workers, and communicating with the database."

[dependencies]
async-trait = "0.1.83"
dotenv = "0.15.0"
futures = "0.3.31"
lapin = "2.5.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
tracing = "0.1.40"
tokio = { version = "1.41.1", features = ["full"] }

[build-dependencies]
